--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
 <div class="jumbotron">
 
     <a  [routerLink]="['/view']" class="btn btn-default btn-lg homebutton">
-        <img src="./assets/images/home.png"> 
+        <img src="home.png"> 
     </a>
    
   </div>
